--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                     <!-- Facebook Icon -->
                     <img src="./facebook.svg" alt="" />
                     <p>Facebook helps you connect and share with the people in your life.</p>
+		    <p class="madeby" >Made by Vineeth</p>
                 </div>
             </div>
             <!-- Second Half -->
